# w03_project_crud/routes/auth.js
@@ -1,0 +1,13 @@
+const router = require('express').Router();
+const passport = require('passport');
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+  req.logout(function(err) {
+    if (err) { return next(err); }
+    res.redirect('/');
+  });
+});
+
+module.exports = router;
